Solve scrollability when snapped
Had to look at this example since it’s not built in, but relying on an extra padding style… https://github.com/Temzasse/react-modal-sheet/blob/main/example/src/components/ScrollableSnapPoints.tsx

--- a/src/components/assets/styles/sheet.module.css
+++ b/src/components/assets/styles/sheet.module.css
@@ -53,10 +53,6 @@
   color: var(--theme-text);
 }
 
-.draggableBottomSheetScroller {
-  max-height: 100%;
-}
-
 .dragIndicator {
   width: calc(var(--icon-size, 40px) * 1.5);
   position: absolute;
